# ntb-67

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
client/: __init__.py  core.py  daemon.py  run.py  tui.py  tunnel_client.py
common/: __init__.py  utils.py
html/: index.html
migrations/: env.py
migrations/versions/: 3e4730089f07_initial_migration.py  43c6f5a4c1a8_add_max_tunnels_to_telegram_users.py  71a7637dcda5_add_user_subdomains_table_and_.py  77bec145e002_add_users_and_roles_tables_for_sqladmin.py
server/: __init__.py  config.py  database.py  http_utils.py  main.py  models.py  proxy_server.py  security.py  utils.py
server/admin/: __init__.py  auth.py  bootstrap.py  views.py
server/api/: __init__.py  dependencies.py  routes.py
server/core/: __init__.py  reverse_proxy_server.py  security.py
server/tg_bot/: __init__.py  crud.py  handlers.py  models.py
