[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntb-67-client"
version = "0.1.6"
description = "Asyncio Tunneling Proxy Client — alternative for ngrok/localtunnel"
readme = "README.md"
authors = [
    { name = "Timur Zolotov (netbiom)", email = "helloworldbooo@gmail.com" }
]
license = { text = "NTB-67 Source-Available Commercial License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.138.0",
    "textual==8.2.8",
]

[project.urls]
Homepage = "https://github.com/TZbooo/ntb-67"
"Telegram Support" = "https://t.me/netbiom"

[project.scripts]
ntb-67-client = "client.tunnel_client:main"

[tool.setuptools]
packages = ["client", "common"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "D",
]
ignore = [
    "D203", "D212",
    "E501",
]
